k8s/ingress/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: safarsaathi-alb
  namespace: safarsaathi

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/success-codes: "200"

    # Explicitly specify the public subnets
    alb.ingress.kubernetes.io/subnets: subnet-06a1f5c89b6c2608f,subnet-0e5eefc53353f3c06,subnet-01eb8bc16fbf420db

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8081
